[package]
name = "kube-event-exporter"
description = "Watches for kubernetes events and prints them to the console."
version = "0.1.0"
authors = ["Jens Walter <jens@apimeister.com>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["kubernetes"]
repository = "https://github.com/JensWalter/kube-event-exporter/"
documentation = "https://docs.rs/kube-event-exporter"

[dependencies]
kube = { version="0.53", default-features = false }
kube-runtime = { version="0.53" }
tokio = { version="1", features=["full"] }
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_18"] }
futures = "0.3"
env-var = "1"
chrono = "0.4"
serde_json = "1"